--- a/app/views/heroes/index.html.erb
+++ b/app/views/heroes/index.html.erb
@@ -1,5 +1,7 @@
 <h1>List of Heroes</h1>
 
-<%# <% @heroes.each do |hero| %>
-
-  <%# end %>
+<ul>
+  <% @heroes.each do |hero| %>
+    <li><pe>hero.name</pe></li>
+  <% end %>
+</ul>
