--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -1,7 +1,7 @@
 <h1>List of Heroes</h1>
 
 <ul>
-  <% @heroes.each do |hero| %>
+  <% @heros.each do |hero| %>
     <li><pe>hero.name</pe></li>
   <% end %>
 </ul>
