--- a/app/views/heros/show.html.erb
+++ b/app/views/heros/show.html.erb
@@ -7,4 +7,6 @@
   <%= @hero.price %>
 </div>
 
+<%= link_to "Edit", edit_hero_path %>
+<%= link_to "Delete", hero_path(@hero), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 <%= link_to "Back to the heroes list", heros_path %>
