--- a/app/views/heros/new.html.erb
+++ b/app/views/heros/new.html.erb
@@ -1,12 +1,49 @@
-<h1> Add a hero to rent</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+  <title>Herohub - Add a Hero</title>
+  <!-- Favicon-->
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <!-- Bootstrap icons-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+</head>
+<body class="d-flex flex-column h-100">
+  <main class="flex-shrink-0">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+      <div class="container px-5">
+        <%= link_to "/", class: "navbar-brand" do %>
+          <%= image_tag "logo.png", style: "height: 50px; width: auto;" %>
+        <% end %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="/">FAQ</a></li>
+          </ul> 
+        </div>
+      </div>
+    </nav>
 
-<br>
+    <!-- Hero Form Section -->
+    <section class="container mt-4">
+      <h1>Add a hero to rent</h1>
+      <br>
 
-<%= simple_form_for(@hero) do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :power %>
-  <%= f.input :city %>
-  <%= f.input :price %>
-  <%= f.button :submit %>
-<% end %>
+      <%= simple_form_for(@hero) do |f| %>
+        <%= f.input :name %>
+        <%= f.input :description %>
+        <%= f.input :power %>
+        <%= f.input :city %>
+        <%= f.input :price %>
+        <%= f.button :submit, class: "btn btn-primary" %>
+      <% end %>
+    </section>
+  </main>
+</body>
+</html>
