--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heroes</title>
-</head>
-<body>
-  <div class="navbar navbar-light navbar-herohub navbar-light">
-    <div class="container-fluid">
-      <%= link_to "/", class: "navbar-brand" do %>
-        <%= image_tag "logo.png", style: "height: 50px; width: auto;" %>
-      <% end %>
-  
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto flex-row justify-content-center">
-            <%# if user_signed_in? %>
-              <li class="nav-item active">
-                <%= link_to "Heroes", "/heros", class: "nav-link", style: "margin-right: 10px;" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Profile", "#", class: "nav-link", style: "margin-right: 10px;" %>
-              </li>
-              <li class="nav-item">
-                <%= link_to "Add your hero", "#", class: "nav-link", style: "margin-right: 10px;" %>
-              </li>
-            <%# else %>
-              <!--li class="nav-item"-->
-                <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
-              <!--/li-->
-            <%# end %>
-          </ul>
-        </div>
-      </div>
-  </div>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Herohub</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    </head>
+    <body class="d-flex flex-column h-100">
+        <main class="flex-shrink-0">
+            <!-- Navigation-->
+            <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+                <div class="container px-5">
+                    <%= link_to "/", class: "navbar-brand" do %>
+                      <%= image_tag "logo.png", style: "height: 50px; width: auto;" %>
+                    <% end %>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                            <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">FAQ</a></li>
+                        </ul> 
+                    </div>
+                </div>
+            </nav>
 
-<h1>List of Heroes</h1>
-<br>
-<%= link_to "Home", root_path, class: "btn btn-primary" %>
-<div class="row">
-  <% @heros.each do |hero| %>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <div class="card-body">
-          <h2 class="card-title"><%= link_to hero.name, hero_path(hero) %></h2>
-          <ul class="list-unstyled">
-            <li><strong>Description:</strong> <%= hero.description %></li>
-            <li><strong>Power:</strong> <%= hero.power %></li>
-            <li><strong>City:</strong> <%= hero.city %></li>
-            <li><strong>Price:</strong> <%= hero.price %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  <% end %>
-</div>
+            <section class="bg-black">
+              <h1 class="text-center text-white">Heroes</h1>
+              <div class="container">
+                <%= link_to "Home", root_path, class: "rounded-4 btn btn-primary btn-lg px-4 me-sm-3 custom-btn mb-3" %>
+                <%= link_to "Create", new_hero_path, class: "rounded-4 btn btn-outline-light btn-lg px-4 mb-3" %>
+                <div class="row">
+                  <% @heros.each do |hero| %>
+                    <div class="col-md-4 mb-4">
+                      <div class="card rounded-5" style="background-color: #000000; background-image: linear-gradient(180deg, #000000 0%, #ffffff 100%);">                                   
+                        <%= image_tag "hero#{rand(1..16)}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
+                        <div class="card-body">
+                          <h2 class="card-title h5 mb-3"><span style="font-weight: bold;"><%= hero.name %></h2>
+                          <p class="card-text text-muted mb-4"><%= hero.description %></p>
+                          <ul class="list-unstyled mb-0">
+                            <li><strong>Power:</strong> <span style="font-weight: bold;"><%= hero.power %></span></li>
+                            <li><strong>City:</strong> <span style="font-weight: bold;"><%= hero.city %></span></li>
+                            <li><strong>Price:</strong> <span style="font-weight: bold;"> <%= number_to_currency(hero.price, unit: '') %></li>
+                          </ul>
+                        </div>
+                        <div class="card-footer">
+                          <%= link_to "Rent", root_path, class: "rounded-4 btn btn-primary btn-lg px-4 me-sm-3 custom-btn mb-3" %>
+                          <%= link_to "More Infos", hero_path(hero), class: "rounded-4 btn btn-outline-light btn-lg px-4 mb-3 bg-black text-white" %>
+                        </div>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            </section>
 
-<%= link_to "new", new_hero_path %>
+          <nav aria-label="Numerous Page Navigation">
+            <ul class="pagination justify-content-center bg-black mb-0">
+              <% (1..@total_pages).each do |page| %>
+                <li class="page-item <%= 'active' if page == @page_number %>">
+                  <%= link_to page, heros_path(page: page), class: "page-link bg-black text-white" %>
+                </li>
+              <% end %>
+            </ul>
+          </nav>
