--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,8 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Herohub</title>
-        <%# <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" /> %>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     </head>
@@ -30,7 +30,7 @@
                 </div>
             </nav>
             <!-- Header-->
-            <header class="bg-black py-5">
+            <header class="bg-black py-5 glow-effect">
                 <div class="container px-5">
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
@@ -38,76 +38,73 @@
                                 <h1 class="display-5 fw-bolder text-white mb-2">Welcome To Herohub!</h1>
                                 <p class="lead fw-normal text-white-50 mb-4">Quickly rent & start your next adventure!</p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                    <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/heros">Rent now!</a>
-                                    <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
+                                    <%= link_to "Rent now!", "/heros", class: "rounded-4 btn btn-primary btn-lg px-4 me-sm-3 custom-btn", title: "Rent now!" %>
+                                    <a class="rounded-4 btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+                        <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center">
+                            <%= image_tag "preview.png", class: "img-fluid rounded-5 my-5", alt: "Preview" %>
+                        </div>
                     </div>
                 </div>
             </header>
             <!-- Features section-->
             <section class="py-5 bg-black" id="features">
-              <div class="container px-5 my-5">
-                <div class="row gx-5">
-                  <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h2 class="fw-bolder text-white mb-0">Rent Your Hero Today!</h2>
-                  </div>
-                  <div class="col-lg-8">
-                    <div class="row gx-5 row-cols-1 row-cols-md-2">
-                      <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                        <h2 class="h5 text-white">Wide Selection</h2>
-                        <p class="mb-0 text-white">Choose from our collection of unique and hilariously heroes. Each one has its own quirks and charm.</p>
-                      </div>
-                      <div class="col mb-5 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                        <h2 class="h5 text-white">Unleash the Lame</h2>
-                        <p class="mb-0 text-white">Experience the joy of unleashing your chosen hero upon the world. Embrace the laughter and absurdity!</p>
-                      </div>
-                      <div class="col mb-5 mb-md-0 h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                        <h2 class="h5 text-white">Customizable Lame Powers</h2>
-                        <p class="mb-0 text-white">Search & find your perfect hero, as quirky or awkward as you desire!</p>
-                      </div>
-                      <div class="col h-100">
-                        <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                        <h2 class="h5 text-white">24/7 Lame Support</h2>
-                        <p class="mb-0 text-white">Our team of heroes experts is available around the clock to assist you with any hero-related inquiries. We take laming seriously!</p>
-                      </div>
+                <div class="container px-5 my-5">
+                    <div class="row gx-5">
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h2 class="fw-bolder text-white mb-0">Rent Your Hero Today!</h2>
+                        </div>
+                        <div class="col-lg-8">
+                            <div class="row gx-5 row-cols-1 row-cols-md-3">
+                                <div class="col mb-5 h-100">
+                                    <div class="feature bg-orange text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
+                                    <h2 class="h5 text-white">Wide Selection</h2>
+                                    <p class="mb-0 text-white">Choose from our collection of unique and hilariously heroes. Each one has its own quirks and charm.</p>
+                                </div>
+                                <div class="col mb-5 h-100">
+                                    <div class="feature bg-orange text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
+                                    <h2 class="h5 text-white">Unleash the Lame</h2>
+                                    <p class="mb-0 text-white">Experience the joy of unleashing your chosen hero upon the world. Embrace the laughter and absurdity!</p>
+                                </div>
+                                <div class="col mb-5 h-100">
+                                    <div class="feature bg-orange text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
+                                    <h2 class="h5 text-white">Customizable Lame Powers</h2>
+                                    <p class="mb-0 text-white">Search & find your perfect hero, as quirky or awkward as you desire!</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
             </section>
             <!-- Sales preview section-->
             <section class="py-5 bg-black text-white">
-              <div class="container px-5 my-5">
-                <div class="row gx-5 justify-content-center">
-                  <div class="col-lg-8 col-xl-6">
-                    <div class="text-center">
-                      <h2 class="fw-bolder">Discover our latest sales!</h2>
-                      <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 justify-content-center">
+                        <div class="col-lg-8 col-xl-6">
+                            <div class="text-center">
+                                <h2 class="fw-bolder">Discover our latest sales!</h2>
+                                <p class="lead fw-normal text-muted mb-5">Check out our amazing deals and discounts on heroes. Find the perfect hero for your next adventure!</p>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-                </div>
-                <div class="row gx-5">
+                    <div class="row gx-5">
                         <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
+                            <div class="card h-100 shadow border-0 rounded-5">
+                                <%= image_tag "hero1.png", class: "rounded-top-5 card-img-top", alt: "Hero 1" %>
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">New</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Super-Zizicophaire</h5></a>
-                                    <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                                </div>
-                                <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Doctor Onion</h5></a>
+                                    <p class="card-text mb-0">He never cries when chopping onions.</p>
+                                    </div>
+                                    <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://source.unsplash.com/40x40/?avatar" alt="Random Avatar" />
                                             <div class="small">
-                                                <div class="fw-bold">Kelly Rowan</div>
-                                                <div class="text-muted">March 12, 2023 &middot; 6 min read</div>
+                                                <div class="fw-bold">Mother Theresa</div>
+                                                <div class="text-muted">September 12, 2023 &middot; 6 min read</div>
                                             </div>
                                         </div>
                                     </div>
@@ -115,20 +112,20 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
+                            <div class="card h-100 shadow border-0 rounded-5">
+                             <%= image_tag "hero3.png", class: "rounded-top-5 card-img-top", alt: "Hero 2" %>
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">New</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Super-Machine à laver (et non dimitri, on parle pas d'une femme)</h5></a>
-                                    <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Wash Heroin</h5></a>
+                                    <p class="card-text mb-0">Her powers allows her to create and control soapy water from her body, oh my gosh!</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://source.unsplash.com/40x40/?avatar" alt="Random Avatar" />
                                             <div class="small">
-                                                <div class="fw-bold">Josiah Barclay</div>
-                                                <div class="text-muted">March 23, 2023 &middot; 4 min read</div>
+                                                <div class="fw-bold">Peter Parker</div>
+                                                <div class="text-muted">September 12, 2023 &middot; 4 min read</div>
                                             </div>
                                         </div>
                                     </div>
@@ -136,20 +133,20 @@
                             </div>
                         </div>
                         <div class="col-lg-4 mb-5">
-                            <div class="card h-100 shadow border-0">
-                                <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
+                            <div class="card h-100 shadow border-0 rounded-5">
+                                <%= image_tag "hero2.png", class: "rounded-top-5 card-img-top", alt: "Hero 3" %>
                                 <div class="card-body p-4">
                                     <div class="badge bg-primary bg-gradient rounded-pill mb-2">New</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Super-Clément</h5></a>
-                                    <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Napalm Fart</h5></a>
+                                    <p class="card-text mb-0">Unleash the explosive power of the Napalm Fart hero! Watch as he creates fiery chaos with his unique fartability.</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
                                     <div class="d-flex align-items-end justify-content-between">
                                         <div class="d-flex align-items-center">
-                                            <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
+                                            <img class="rounded-circle me-3" src="https://source.unsplash.com/40x40/?avatar" alt="Random Avatar" />
                                             <div class="small">
-                                                <div class="fw-bold">Evelyn Martinez</div>
-                                                <div class="text-muted">April 2, 2023 &middot; 10 min read</div>
+                                                <div class="fw-bold">Evelyn Doe</div>
+                                                <div class="text-muted">September 12, 2023 &middot; 10 min read</div>
                                             </div>
                                         </div>
                                     </div>
@@ -158,7 +155,7 @@
                         </div>
                     </div>
                     <!-- Call to action-->
-                    <aside class="bg-primary bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+                    <aside class="bg-primary bg-gradient rounded-5 p-4 p-sm-5 mt-5">
                         <div class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start">
                             <div class="mb-4 mb-xl-0">
                                 <div class="fs-3 fw-bold text-white">New products, delivered to you.</div>
@@ -197,7 +194,5 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
     </body>
 </html>
