--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,14 +23,14 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="/heros">Heroes</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/">Profile</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/dashboard">Profile</a></li>
                             <li class="nav-item"><a class="nav-link" href="/">FAQ</a></li>
                             <% if user_signed_in? %>
                 <li class="nav-item"><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link" %></li>
               <% else %>
                 <li class="nav-item"><%= link_to "Login", new_user_session_path, class: "nav-link" %></li>
               <% end %>
-                        </ul> 
+                        </ul>
                     </div>
                 </div>
             </nav>
