--- a/app/views/heros/index.html.erb
+++ b/app/views/heros/index.html.erb
@@ -85,35 +85,39 @@
           </style>
 
 
-                <div class="container">
-                  <div class="d-flex justify-content-start mb-3 position-fixed bottom-0 start-0 p-5">
-                    <%= link_to new_hero_path, class: "rounded-5 btn btn-outline-light btn-sm px-3 btn-circle", title: "Create" do %>
-                        <i class="fas fa-plus">Create</i>
-                    <% end %>
+              <div class="container">
+                <div class="d-flex justify-content-start mb-3 position-fixed bottom-0 start-0 p-5">
+                  <%= link_to new_hero_path, class: "rounded-5 btn btn-outline-light btn-sm px-3 btn-circle", title: "Create" do %>
+                    <i class="fas fa-plus">Create</i>
+                  <% end %>
                 </div>
-                  <div class="row">
-                    <% @heros.each do |hero| %>
-                      <div class="col-md-3 mb-3">
+                <div class="row">
+                  <% @heros.each do |hero| %>
+                    <div class="col-md-3 mb-3">
                       <div class="card rounded-5" style="background-color: #ffffff;">
-                      <% hero_image_id = hero.id %>                             
-                      <%= image_tag "hero#{hero_image_id % 16 + 1}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
-                          <div class="card-body p-3 d-flex flex-column justify-content-between" style="height: 250px; overflow-y: auto; font-family: 'Poppins', sans-serif;"> <!-- Set a fixed height for the card body, adjust as needed -->
-                              <div>
-                                  <h2 class="card-title h6 mb-2 text-center" style="font-size: 1.2rem; color: #333333;"><strong><%= hero.name %></strong></h2>
-                                  <p class="card-text text-muted" style="font-size: 1rem; color: #555555;"><strong>Power:</strong> <%= hero.power %></p>
-                              </div>
-                              <div>
-                                  <p class="card-text text-muted mb-1"><%= number_to_currency(hero.price, unit: '$') %></p>
-                              </div>
-                              <div>
-                                  <%= link_to "Rent", hero_path(hero), class: "rounded-4 btn btn-outline-light btn-lg px-3 mb-2 bg-black text-white" %>
-                              </div>
+                        <% if hero.image.attached? %>
+                          <%= image_tag hero.image, class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
+                        <% else %>
+                          <% hero_image_id = hero.id %>
+                          <%= image_tag "hero#{hero_image_id % 16 + 1}.png", class: "card-img-top rounded-top rounded-top-5", alt: "#{hero.name} Image" %>
+                        <% end %>
+                        <div class="card-body p-3 d-flex flex-column justify-content-between" style="height: 250px; overflow-y: auto; font-family: 'Poppins', sans-serif;">
+                          <div>
+                            <h2 class="card-title h6 mb-2 text-center" style="font-size: 1.2rem; color: #333333;"><strong><%= hero.name %></strong></h2>
+                            <p class="card-text text-muted" style="font-size: 1rem; color: #555555;"><strong>Power:</strong> <%= hero.power %></p>
                           </div>
+                          <div>
+                            <p class="card-text text-muted mb-1"><%= number_to_currency(hero.price, unit: '$') %></p>
+                          </div>
+                          <div>
+                            <%= link_to "Rent", hero_path(hero), class: "rounded-4 btn btn-outline-light btn-lg px-3 mb-2 bg-black text-white" %>
+                          </div>
+                        </div>
                       </div>
-                  </div>
-                    <% end %>
-                  </div>
+                    </div>
+                  <% end %>
                 </div>
+              </div>
             </section>
 
             <nav aria-label="Numerous Page Navigation">
